--- a/pages/one.html
+++ b/pages/one.html
@@ -2,10 +2,12 @@
 
 <head>
     <meta charset="utf-8" />
+    <script type="text/javascript" src="../scripts/onejs.js"></script>
 </head>
 
 <body>
     <p>This is page One</p>
+    <input type="button" value="completed" onclick="setcom()"/>
 </body>
 
 </html>
